--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,9 @@ file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 7
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate-support.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.ejb3-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${libs.hibernate-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
