--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}
+    ${libs.hibernate-support.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate4-persistence.classpath}:\
+    ${libs.jpa20-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
