--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=1laba
+application.vendor=18760
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,17 +27,18 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/1laba.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate4-persistence.classpath}:\
+    ${libs.jpa20-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
